# chessviz-Xydint

./: .gitignore  CMakeLists.txt  Makefile  chess.cpp
.github/workflows/: build.yml
src/: ChessDesk.cpp  Chesslib.cpp  Figure.cpp  main.cpp
src/include/: ChessDesk.hpp  Chesslib.hpp  Figure.hpp
test/: test_list.cpp
